--- a/client/src/components/MatchOver.css
+++ b/client/src/components/MatchOver.css
@@ -17,10 +17,10 @@
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-  font-size: clamp(0.2rem, 1vw, 1.25rem);
+  font-size: clamp(0.2rem, 1cqw, 1.25rem);
   transform: translate(-50%, -50%);
   border-radius: 2%;
-  border: rgb(255, 255, 255) 0.2vw solid;
+  border: rgb(255, 255, 255) 0.2cqw solid;
 }
 
 .rematch {
@@ -28,14 +28,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: clamp(0.2rem, 1vw, 1.25rem);
+  font-size: clamp(0.2rem, 1cqw, 1.25rem);
   width: 100%;
   height: 50%;
 }
 
 .rematch-winner {
   font-family: "Bungee";
-  font-size: clamp(0.5rem, 4vw, 2.5rem);
+  font-size: clamp(0.5rem, 4cqw, 2.5rem);
   justify-self: flex-start;
   color: lime;
   padding-bottom: 10%;
@@ -52,7 +52,7 @@
 
 .rematch-ready-btn,
 .rematch-cancel-btn {
-  font-size: clamp(0.5rem, 4vw, 2.5rem);
+  font-size: clamp(0.5rem, 4cqw, 2.5rem);
   background-color: forestgreen;
   padding: 8% 4%;
   border: none;
@@ -73,7 +73,7 @@
 }
 
 .rematch-exit-btn {
-  font-size: clamp(0.3rem, 2vw, 1.25rem);
+  font-size: clamp(0.3rem, 2cqw, 1.25rem);
   background-color: black;
   font-family: "Bungee", cursive;
   color: white;
@@ -91,6 +91,6 @@
 
 .win-text,
 .lose-text {
-  font-size: clamp(0.25rem, 2vw, 1.25rem);
+  font-size: clamp(0.25rem, 2cqw, 1.25rem);
   color: gainsboro;
 }
