--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,8 +23,7 @@ body {
   width: 1280px;
   height: 720px;
   container-type: size;
-  transform: scale(var(--app-scale, 1));
-  transform-origin: center center;
+  zoom: var(--app-zoom, 1);
   position: relative;
   overflow: hidden;
 }
